--- a/package.json
+++ b/package.json
@@ -9,7 +9,20 @@
   },
   "dependencies": {
     "react": "16.8.6",
-    "react-native": "0.60.4"
+    "@react-native-community/async-storage": "^1.6.1",
+    "react-native": "0.60.4",
+    "axios": "^0.19.0",
+    "email-validator": "^2.0.4",
+    "react-dom": "^16.8.6",
+    "react-native-elements": "^1.1.0",
+    "react-native-indicators": "^0.13.0",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-navigation": "^3.11.0",
+    "react-redux": "^7.0.3",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.3",
+    "react-native-vector-icons": "^6.6.0",
+    "sugar": "^2.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -18,6 +31,11 @@
     "babel-jest": "^24.8.0",
     "eslint": "^6.1.0",
     "jest": "^24.8.0",
+    "flow-bin": "^0.104.0",
+    "flow-typed": "^2.6.0",
+    "jest-mock-axios": "^3.0.0",
+    "prettier-eslint": "^8.8.2",
+    "redux-saga-tester": "^1.0.468",
     "metro-react-native-babel-preset": "^0.55.0",
     "react-test-renderer": "16.8.6"
   },
