--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "react-native start",
-    "test": "jest",
+    "test": "jest --watchAll",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -30,6 +30,7 @@
     "@babel/core": "^7.5.5",
     "@babel/runtime": "^7.5.5",
     "@react-native-community/eslint-config": "^0.0.5",
+    "@testing-library/react": "^9.1.1",
     "babel-jest": "^24.8.0",
     "eslint": "^6.1.0",
     "flow-bin": "^0.104.0",
@@ -38,6 +39,7 @@
     "jest-mock-axios": "^3.0.0",
     "metro-react-native-babel-preset": "^0.55.0",
     "prettier-eslint": "^8.8.2",
+    "react-native-testing-library": "^1.11.1",
     "react-test-renderer": "16.8.6",
     "redux-saga-tester": "^1.0.468"
   },
