--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/core": "^7.5.5",
     "@babel/runtime": "^7.5.5",
     "@react-native-community/eslint-config": "^0.0.5",
+    "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^9.1.1",
     "babel-jest": "^24.8.0",
     "eslint": "^6.1.0",
