--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/runtime": "^7.5.5",
     "@react-native-community/eslint-config": "^0.0.5",
     "@testing-library/jest-dom": "^4.0.0",
+    "@testing-library/jest-native": "^3.0.2",
     "@testing-library/react": "^9.1.1",
     "babel-jest": "^24.8.0",
     "eslint": "^6.1.0",
