--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-gesture-handler": "^1.3.0",
     "react-native-indicators": "^0.13.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^6.9.0",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
